<resources>
    <string name="app_name">AppFerreteria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="inicio">Inicio</string>
    <string name="perfil">Perfil</string>
    <string name="productos">Productos</string>
    <string name="ventas">Ventas</string>
    <string name="Stock">stock</string>
    <string name="Cerrar_Sesión">Cerrar Sesion\n</string>
    <string name="Movimientos_Stock">Movimientos Stock</string>
</resources>