<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="Inicio" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/perfil"
            android:title="@string/perfil" />
        <item
            android:id="@+id/productosFragment"
            android:icon="@drawable/productos"
            android:title="@string/productos" />

        <item
            android:id="@+id/reporteVentasFragment"
            android:icon="@drawable/ventas"
            android:title="@string/ventas" />

        <item
            android:id="@+id/historialMovimientosFragment"
            android:icon="@drawable/stock"
            android:title="@string/Stock" />

        <item
            android:id="@+id/registrarUsuarioFragment"
            android:icon="@drawable/users"
            android:title="Registrar usuarios" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/Cerrar_Sesión" />
    </group>
</menu>